# ZFish

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PACKAGES.md  PUBLISHING.md  README.md  ROADMAP.md  SECURITY.md  V0.2.1_IMPLEMENTATION_SUMMARY.md  sonar-project.properties
.github/: CI_CD_CHANGES.md  README_UPDATE_CHECKLIST.md  RELEASE_GUIDE.md  RELEASE_PROCESS.md  SONARCLOUD_FIX.md  SONARCLOUD_SETUP.md  dependabot.yml  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: docs_update.md
.github/instructions/: README.md  SRS.md
.github/workflows/: auto-release.yml  ci.yml  github-packages.yml  release.yml  sonarcloud.yml
docs/: SUBCOMMAND_IMPLEMENTATION.md
examples/: 01_hello_world.rs  02_argument_parsing.rs  03_colored_text.rs  04_progress_bar.rs  05_logger.rs  06_terminal_control.rs  07_interactive_prompts.rs  08_complete_cli.rs  09_subcommands.rs  10_arg_features_v2.rs  11_core_features_demo.rs  12_beautiful_reports.rs  13_table_examples.rs  14_alignment_test.rs  15_debug_emoji_width.rs  16_comprehensive_unicode_test.rs  17_unicode_edge_cases.rs  18_manual_table_drawing.rs
src/: args.rs  command.rs  lib.rs  log.rs  progress.rs  prompt.rs  style.rs  table.rs  term.rs  unicode.rs
src/os/: mod.rs  unix.rs  windows.rs
tests/: helpers.rs  integration_test.rs  test_args.rs  test_args_comprehensive.rs  test_command_comprehensive.rs  test_command_v2_features.rs  test_log_comprehensive.rs  test_logger.rs  test_progress.rs  test_progress_comprehensive.rs  test_prompt.rs  test_style.rs  test_table.rs  test_term.rs  test_term_comprehensive.rs
