[package]
name = "zfish"
version = "0.1.2"
edition = "2024"
rust-version = "1.90"
authors = ["Jeet Karena <karenajeet@proton.me>"]
description = "Ultra-light, zero-dependency Rust CLI framework for building beautiful command-line applications"
repository = "https://github.com/JeetKarena/ZFish.git"
license = "MIT"
readme = "README.md"
keywords = ["cli", "terminal", "command-line", "argument-parser", "ansi"]
categories = ["command-line-interface", "command-line-utilities"]

[features]
default = ["colour"]
colour = []          # ANSI colour support
raw = []             # Raw terminal mode
progress = ["raw"]   # Progress bars need raw mode
interactive = ["raw"] # Interactive prompts need raw mode

[dependencies]
# Intentionally empty — zero third-party dependencies
# This is a core feature of zfish: build powerful CLIs using only std library

[dev-dependencies]
# Even in tests, we maintain zero dependencies

[[test]]
name = "args_test"
path = "tests/test_args.rs"

[[test]]
name = "args_comprehensive_test"
path = "tests/test_args_comprehensive.rs"

[[test]]
name = "style_test"
path = "tests/test_style.rs"

[[test]]
name = "progress_test"
path = "tests/test_progress.rs"

[[test]]
name = "progress_comprehensive_test"
path = "tests/test_progress_comprehensive.rs"

[[test]]
name = "prompt_test"
path = "tests/test_prompt.rs"

[[test]]
name = "logger_test"
path = "tests/test_logger.rs"

[[test]]
name = "log_comprehensive_test"
path = "tests/test_log_comprehensive.rs"

[[test]]
name = "term_test"
path = "tests/test_term.rs"

[[test]]
name = "term_comprehensive_test"
path = "tests/test_term_comprehensive.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"